Fix overflowing hidden lozenges

--- a/src/ensembl/src/shared/components/app-bar/AppBar.scss
+++ b/src/ensembl/src/shared/components/app-bar/AppBar.scss
@@ -10,6 +10,7 @@
   align-items: center;
   font-size: 12px;
   padding: 8px 20px;
+  height: max-content;
   min-height: 80px;
   width: 100%;
 }
